--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,8 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+
+
 @layer components {
   .sidebar-icon {
     @apply relative flex 
@@ -15,21 +17,258 @@
   .title {
     @apply font-bold text-2xl my-auto
   }
+
+  .sidebar-icon:before {
+    background: linear-gradient(to right, transparent, rgb(255 237 213), rgb(249 115 22));
+    content: "";
+    left: 0px;
+    z-index: 0;
+    top: 0px;
+    height: 100%;
+    width: 0%;
+    position:absolute;
+  } 
+
+  .sidebar-icon:hover:before {
+    transition: all 700ms ease;
+    width: 100%;
+  }}
+
+.svg {
+  display: inline-block;
+  height: 200px;
+  text-align: center;
+  width: 200px;
+  line-height: 200px;
+  text-align: center;
+  background-color: #FFF;
+  border-radius: 50%;
 }
 
-.sidebar-icon:hover:before {
-  transition: all 700ms ease;
-  width: 100%;
+#svg {
+  display: inline-block;
+  vertical-align: middle;
+  fill: #0057B8;
+}
+#svg path:nth-child(1) {
+  -webkit-animation: pweek 1.8s linear infinite;
+          animation: pweek 1.8s linear infinite;
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s;
+}
+#svg path:nth-child(1):hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+#svg path:nth-child(2) {
+  -webkit-animation: pweek 1.8s linear infinite;
+          animation: pweek 1.8s linear infinite;
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
+}
+#svg path:nth-child(2):hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+#svg path:nth-child(3) {
+  -webkit-animation: pweek 1.8s linear infinite;
+          animation: pweek 1.8s linear infinite;
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
+}
+#svg path:nth-child(3):hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+#svg path:nth-child(4) {
+  -webkit-animation: pweek 1.8s linear infinite;
+          animation: pweek 1.8s linear infinite;
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
+}
+#svg path:nth-child(4):hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+#svg path:nth-child(5) {
+  -webkit-animation: pweek 1.8s linear infinite;
+          animation: pweek 1.8s linear infinite;
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+}
+#svg path:nth-child(5):hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+#svg path:nth-child(6) {
+  -webkit-animation: pweek 1.8s linear infinite;
+          animation: pweek 1.8s linear infinite;
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s;
+}
+#svg path:nth-child(6):hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+#svg path:nth-child(7) {
+  -webkit-animation: pweek 1.8s linear infinite;
+          animation: pweek 1.8s linear infinite;
+  -webkit-animation-delay: 0.7s;
+          animation-delay: 0.7s;
+}
+#svg path:nth-child(7):hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+#svg path:nth-child(8) {
+  -webkit-animation: pweek 1.8s linear infinite;
+          animation: pweek 1.8s linear infinite;
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
+}
+#svg path:nth-child(8):hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+#svg path:nth-child(9) {
+  -webkit-animation: pweek 1.8s linear infinite;
+          animation: pweek 1.8s linear infinite;
+  -webkit-animation-delay: 0.9s;
+          animation-delay: 0.9s;
+}
+#svg path:nth-child(9):hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+#svg path:nth-child(10) {
+  -webkit-animation: pweek 1.8s linear infinite;
+          animation: pweek 1.8s linear infinite;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+#svg path:nth-child(10):hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+#svg path:nth-child(11) {
+  -webkit-animation: pweek 1.8s linear infinite;
+          animation: pweek 1.8s linear infinite;
+  -webkit-animation-delay: 1.1s;
+          animation-delay: 1.1s;
+}
+#svg path:nth-child(11):hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+#svg path:nth-child(12) {
+  -webkit-animation: pweek 1.8s linear infinite;
+          animation: pweek 1.8s linear infinite;
+  -webkit-animation-delay: 1.2s;
+          animation-delay: 1.2s;
+}
+#svg path:nth-child(12):hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+#svg path:nth-child(13) {
+  -webkit-animation: pweek 1.8s linear infinite;
+          animation: pweek 1.8s linear infinite;
+  -webkit-animation-delay: 1.3s;
+          animation-delay: 1.3s;
+}
+#svg path:nth-child(13):hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+#svg path:nth-child(14) {
+  -webkit-animation: pweek 1.8s linear infinite;
+          animation: pweek 1.8s linear infinite;
+  -webkit-animation-delay: 1.4s;
+          animation-delay: 1.4s;
+}
+#svg path:nth-child(14):hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+#svg path:nth-child(15) {
+  -webkit-animation: pweek 1.8s linear infinite;
+          animation: pweek 1.8s linear infinite;
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
+}
+#svg path:nth-child(15):hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+#svg path:nth-child(16) {
+  -webkit-animation: pweek 1.8s linear infinite;
+          animation: pweek 1.8s linear infinite;
+  -webkit-animation-delay: 1.6s;
+          animation-delay: 1.6s;
+}
+#svg path:nth-child(16):hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+#svg path:nth-child(17) {
+  -webkit-animation: pweek 1.8s linear infinite;
+          animation: pweek 1.8s linear infinite;
+  -webkit-animation-delay: 1.7s;
+          animation-delay: 1.7s;
+}
+#svg path:nth-child(17):hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+#svg path:nth-child(18) {
+  -webkit-animation: pweek 1.8s linear infinite;
+          animation: pweek 1.8s linear infinite;
+  -webkit-animation-delay: 1.8s;
+          animation-delay: 1.8s;
+}
+#svg path:nth-child(18):hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
 }
 
-.sidebar-icon:before {
-  background: linear-gradient(to right, transparent, rgb(255 237 213), rgb(249 115 22));
-  content: "";
-  left: 0px;
-  z-index: 0;
-  top: 0px;
-  height: 100%;
-  width: 0%;
-  position:absolute;
-} 
+@-webkit-keyframes pweek {
+  0% {
+    fill: #0057B8;
+  }
+  20% {
+    fill: #F11E4A;
+  }
+  40% {
+    fill: #F8A527;
+  }
+  60% {
+    fill: #266D7F;
+  }
+  80% {
+    fill: #82A;
+  }
+  100% {
+    fill: #0057B8;
+  }
+}
 
+@keyframes pweek {
+  0% {
+    fill: #0057B8;
+  }
+  20% {
+    fill: #F11E4A;
+  }
+  40% {
+    fill: #F8A527;
+  }
+  60% {
+    fill: #266D7F;
+  }
+  80% {
+    fill: #82A;
+  }
+  100% {
+    fill: #0057B8;
+  }
+}/*# sourceMappingURL=globals.css.map */
