--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,12 @@
   .title {
     @apply font-bold text-2xl my-auto
   }
+    .tooltip {
+      @apply  w-auto p-2 m-2 min-w-max left-14 rounded-md shadow-md text-white bg-gray-900 text-xs font-bold transition-all duration-100 scale-0 origin-left
+    }
+  .member {
+    @apply  relative rounded-full w-12 h-12 text-white text-center font-bold text-2xl mx-1
+  }
 
   .sidebar-icon:before {
     background: linear-gradient(to right, white, rgb(255 237 213), transparent);
