--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,7 @@
               ;
   }
   .header {
-    @apply h-[61px] -ml-2  text-white bg-gradient-to-r from-blue-500 to-blue-600 grid justify-center
+    @apply h-[61px] text-white bg-gradient-to-r from-blue-500 to-blue-600 grid justify-center
   }
   .title {
     @apply font-bold text-2xl my-auto
