--- a/app/globals.css
+++ b/app/globals.css
@@ -7,15 +7,15 @@
 @layer components {
   .sidebar-icon {
     @apply relative flex 
-                py-4 w-[100%] pl-2 bg-gradient-to-r from-orange-600 to-amber-500 text-white
-                hover:text-orange-600 font-bold text-lg z-10 transition-all duration-700 border-b-[1px];
+                py-4 w-[100%] pl-2 bg-gradient-to-r from-white to-gray-300 text-slate-800
+                hover:text-gray-200 font-bold text-lg z-10 transition-all duration-700 border-b-[1px];
               ;
   }
   .header {
-    @apply h-[61px] text-white bg-gradient-to-r from-blue-500 to-blue-600 grid justify-center
+    @apply text-slate-800 font-semibold bg-white grid border-b-2 h-[3vh] border-slate-800 justify-start
   }
   .title {
-    @apply font-bold text-2xl my-auto
+    @apply font-bold text-2xl  text-slate-800 my-auto -mb-1 ml-2
   }
     .tooltip {
       @apply  w-auto p-2 m-2 min-w-max left-14 rounded-md shadow-md text-white bg-gray-900 text-xs font-bold transition-all duration-100 scale-0 origin-left
@@ -24,8 +24,12 @@
     @apply  relative rounded-full w-12 h-12 text-white text-center font-bold text-2xl mx-1
   }
 
+  .react-calendar {
+    min-width: 380px;
+  }
+
   .sidebar-icon:before {
-    background: linear-gradient(to right, white, rgb(255 237 213), transparent);
+    background: linear-gradient(to right, rgb(74, 74, 74), rgb(150, 150, 150), transparent);
     content: "";
     left: 0px;
     z-index: 0;
