--- a/app/globals.css
+++ b/app/globals.css
@@ -18,11 +18,16 @@
     @apply font-bold text-2xl  text-slate-800 my-auto -mb-1 ml-2
   }
     .tooltip {
-      @apply  w-auto p-2 m-2 min-w-max left-14 rounded-md shadow-md text-white bg-gray-900 text-xs font-bold transition-all duration-100 scale-0 origin-left
+      @apply  w-auto p-2 m-1 min-w-max rounded-md shadow-md text-white bg-gray-900 text-xs font-bold transition-all duration-100 scale-0 origin-left
     }
   .member {
-    @apply  relative rounded-full w-12 h-12 text-white text-center font-bold text-2xl mx-1
+    @apply  relative rounded-full w-10 h-10 text-white text-center font-semibold text-xl mx-1
   }
+  .profile-link {
+    @apply hover:bg-gray-50 px-4 py-4 font-bold text-gray-500 peer-checked:text-slate-800 -mb-2
+    peer-checked:border-b-4 peer-checked:border-b-orange-400;
+  }
+}
 
   .react-calendar {
     min-width: 380px;
@@ -42,7 +47,7 @@
   .sidebar-icon:hover:before {
     transition: all 700ms ease;
     width: 100%;
-  }}
+  }
 
 .svg {
   display: inline-block;
